# subsniffer

./: Cargo.toml  file_str
config/: default.toml
src/: cli.rs  error.rs  main.rs
src/core/: engine.rs  types.rs
src/resolver/: async_resolver.rs  mod.rs
src/sources/: dns_bruteforce.rs  mod.rs  source.rs
